info corrected at index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Argentinian Provinces API</h1>
     <p>This is an API I built to practice Express. When you make a request it returns an array with information of the Argentinian provinces. The information it returns is the name of the province, its capital, its year of foundation and its land area.</p>
-    <p>To make a request you need to make a get request to https://argentinian-provinces.herokuapp.com//api</p>
+    <p>To make a request you need to make a get request to https://argentinian-provinces.herokuapp.com/api</p>
     <p>If you'd like to get information about a specific province you can make your request to /api/&lt; name of your province &gt; . This will return the object with the data of that specific province.</p>
 </body>
 </html>
